--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,7 +10,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.22.0",
+    "bootstrap": "^5.1.2",
     "core-js": "^3.6.5",
+    "jquery": "^3.6.0",
+    "moxios": "^0.4.0",
+    "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
