--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 logging.level.com.taskagile=DEBUG
+logging.level.org.springframework.security=DEBUG
 
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=none
