--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.2",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
     "moxios": "^0.4.0",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
