--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "axios": "^0.22.0",
     "bootstrap": "^5.1.2",
+    "chance": "^1.1.8",
     "core-js": "^3.6.5",
+    "del": "^6.0.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "moxios": "^0.4.0",
     "popper.js": "^1.16.1",
+    "rw": "^1.3.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuelidate": "^0.7.6",
