--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
   <description>Open source task management tool</description>
   <properties>
     <java.version>1.8</java.version>
+    <commons-io.version>2.6</commons-io.version>
   </properties>
   <dependencies>
     <dependency>
@@ -52,6 +53,11 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>${commons-io.version}</version>
     </dependency>
     <dependency>
       <groupId>com.h2database</groupId>
