--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+app.mail-from=noreply@taskagile.com
+
 spring.datasource.url=jdbc:mysql://localhost:3306/task_agile?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=1234
@@ -9,3 +11,8 @@ logging.level.org.springframework.security=DEBUG
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.freemarker.template-loader-path=classpath:/mail-templates/
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.properties.mail.smtp.auth=false
