--- a/pom.xml
+++ b/pom.xml
@@ -160,7 +160,7 @@
               <executable>npm</executable>
               <arguments>
                 <argument>run</argument>
-                <argument>test:e2e</argument>
+                <argument>test:integration</argument>
               </arguments>
             </configuration>
           </execution>
