--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,14 +11,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.3",
+    "@fortawesome/free-solid-svg-icons": "^5.3.0",
+    "@fortawesome/vue-fontawesome": "^0.1.1",
+    "@popperjs/core": "^2.10.2",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.2",
     "chance": "^1.1.8",
     "core-js": "^3.6.5",
     "del": "^6.0.0",
+    "i": "^0.3.6",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "moxios": "^0.4.0",
+    "npm": "^6.4.0",
     "popper.js": "^1.16.1",
     "rw": "^1.3.3",
     "vue": "^2.6.11",
