Implement home page back-end

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ logging.level.com.taskagile=DEBUG
 logging.level.org.springframework.security=DEBUG
 
 spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.freemarker.template-loader-path=classpath:/mail-templates/
