--- a/front-end/package.json
+++ b/front-end/package.json
@@ -28,6 +28,7 @@
     "popper.js": "^1.16.1",
     "rw": "^1.3.3",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.0.0",
     "vue-router": "^3.2.0",
     "vuelidate": "^0.7.6",
     "vuex": "^3.4.0"
@@ -41,7 +42,7 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
-    "@vue/test-utils": "^1.0.3",
+    "@vue/test-utils": "^1.0.0-beta.24",
     "babel-eslint": "^10.1.0",
     "chromedriver": "94",
     "eslint": "^6.7.2",
