--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
   <properties>
     <java.version>1.8</java.version>
     <commons-io.version>2.6</commons-io.version>
+    <p6spy.version>3.7.0</p6spy.version>
   </properties>
   <dependencies>
     <dependency>
@@ -46,6 +47,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-configuration-processor</artifactId>
       <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>p6spy</groupId>
+      <artifactId>p6spy</artifactId>
+      <version>${p6spy.version}</version>
     </dependency>
 
     <dependency>
