--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 app.mail-from=noreply@taskagile.com
 
-spring.datasource.url=jdbc:mysql://localhost:3306/task_agile?useSSL=false
+spring.datasource.url=jdbc:p6spy:mysql://localhost:3306/task_agile?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
 
 logging.level.com.taskagile=DEBUG
 logging.level.org.springframework.security=DEBUG
